--- a/index.html
+++ b/index.html
@@ -2,38 +2,42 @@
 <html lang="es">
 <head>
     <title>Panda Gorgojo Feliz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/Estilos.css">
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
 </head>
 <body class="mainColors">
     <header>
-            <nav class="navbar navbar-expand-lg bg-navbar">
-                <div class="container">
-                <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link text-light fs-4 nav-link-space" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light fs-4 nav-link-space" href="Catalogo.html">Cat&aacute;logo</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light fs-4 nav-link-space" href="#">Sucursales</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light fs-4 nav-link-space" href="form.html">Contacto</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-light fs-4 nav-link-space" href="#">Acerca de nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light fs-4 nav-link-space" href="#">FAQ</a>
-                </li>
-             </ul>
-                </div>
-            </nav>
-    </header>
+        <nav class="navbar navbar-expand-lg d-fixed bg-navbar">
+            <a href="#" class="navbar-brand NavLinkTexBrand">EL Gorgojo Feliz</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-3">
+                        <li class="nav-item">
+                            <a class="nav-link NavLinkTex nav-link-space" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link NavLinkTex nav-link-space" href="Catalogo.html">Cat&aacute;logo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link NavLinkTex nav-link-space" href="#">Sucursales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link NavLinkTex nav-link-space" href="form.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link NavLinkTex nav-link-space" href="#">Acerca de nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link NavLinkTex nav-link-space" href="#">FAQ</a>
+                        </li>
+                     </ul>
+            </div>
+        </nav>
+</header>
     <main>
         <section id="Welcome"> 
             <h1>Bienvenido a <br> Panaderia El Gorgojo Feliz</h1>
