--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
     <section id="Welcome"> 
         <h1>Bienvenido a <br> Panaderia El Gorgojo Feliz</h1>
     </section>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="IMG/PanA.webp" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="IMG/PanB.webp" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="IMG/PanC.webp"alt="Third slide">
+        </div>
+      </div>
+    </div>
 </main>
 <footer>
     <div class="ft-centered">
