--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1>Bienvenido a <br> Panaderia El Gorgojo Feliz</h1>
     </section>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
+      <div class="carousel-item">
         <div class="carousel-item active">
           <img class="d-block w-100" src="IMG/PanA.webp" alt="First slide">
         </div>
