--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/Estilos.css">
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
 </head>
 <body class="mainColors">
 <header>
@@ -43,8 +44,8 @@
     <section id="Welcome"> 
         <h1>Bienvenido a <br> Panaderia El Gorgojo Feliz</h1>
     </section>
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-      <div class="carousel-item">
+    <div class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100" src="IMG/PanA.webp" alt="First slide">
         </div>
