--- a/index.html
+++ b/index.html
@@ -44,19 +44,27 @@
     <section id="Welcome"> 
         <h1>Bienvenido a <br> Panaderia El Gorgojo Feliz</h1>
     </section>
-    <div class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="IMG/PanA.webp" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="IMG/PanB.webp" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="IMG/PanC.webp"alt="Third slide">
-        </div>
-      </div>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="..." alt="First slide">
     </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 </main>
 <footer>
     <div class="ft-centered">
