--- a/Catalogo.html
+++ b/Catalogo.html
@@ -12,7 +12,7 @@
 <body class="ColorsCatl">
 <header>
     <nav class="navbar navbar-expand-lg d-fixed bg-navbar">
-        <a href="index.html" class="navbar-brand"><img id="Brandlogo" src="IMG/logoFinal.png" ></a>
+        <a href="index.html" class="navbar-brand NavLinkTex">Gorgo Feliz</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -278,7 +278,6 @@
             </svg>
         </a>
     </div>
-    <h1 class="text-center CtlgFSiseTop">By Panda5</h1>
 </footer>
 </body>
 </html>
