--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/Estilos.css">
-    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="mainColors">
 <header>
     <!-Estes es el el menu de navegacion->
     <nav class="navbar navbar-expand-lg d-fixed bg-navbar">
-        <a href="index.html" class="navbar-brand"><img id="Brandlogo" src="IMG/logoFinal.png" ></a>
+        <a href="index.html" class="navbar-brand NavLinkTex">Gorgo Feliz</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,57 +43,86 @@
     <section id="Welcome"> 
         <h1>Bienvenido a <br> Panaderia El Gorgojo Feliz</h1>
     </section>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="..." alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="3000">
+            <img src="IMG/PanA.webp" class="ImgSiseCaru mx-auto d-block" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="CaruColors CtlgFSiseTop">Pan frances</h5>
+              <p class="CaruColors CtlgFSiseText">Pan echo con productos 100% organicos, listo para cualquier uso que guste darle.</p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="IMG/PanB.webp" class="ImgSiseCaru mx-auto d-block" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="CaruColors CtlgFSiseTop" class="modalColor">Muffin de banana</h5>
+              <p class="CaruColors CtlgFSiseText">Muffin echo con ingredientes frescos, relleno de trozos de banana.</p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="IMG/PanC.webp" class="ImgSiseCaru mx-auto d-block" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="CaruColors CtlgFSiseTop">Concha</h5>
+              <p class="CaruColors CtlgFSiseText">Pan de concha, con un interior suave y un exterior crujiente, perfecto para un cafe por la tarde.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+      </div>
+      <div class="intro">
+        <p class="intro text">
+          El fundador Zelencio Masa descubri&oacute; su amor por la panader&iacute;a desde temprana edad.
+          Inspirado por los aromas celestiales y los sabores inigualables que emanaban de la panader&iacute;a del pueblo, decidi&oacute; llevar esa experiencia &uacute;nica a un nivel superior. As&iacute; naci&oacute; "El Gorgojito Feliz".
+          <br><br>En "El Gorgojito Feliz", fusionamos la tradici&oacute;n con la innovaci&oacute;n. Utilizamos ingredientes frescos, locales e internacionales para crear aut&eacute;nticas obras maestras de la panader&iacute;a.
+          Cada pan, postre y delicia est&aacute; hecho con el amor y la dedicaci&oacute;n de nuestro equipo de apasionados panaderos. El crujir dorado de una Tarta Francesa reci&eacute;n salida del horno o el sabor reconfortante de nuestros bollos reci&eacute;n horneados son solo una muestra de las delicias que te esperan.
+          <br><br>Pero somos mucho más que una panader&iacute;a. Es un lugar donde los corazones se llenan de calidez y amistad.
+          Te recibiremos con una sonrisa genuina y compartiremos historias y consejos culinarios mientras disfrutas de nuestras creaciones.
+          Te invitamos a que nos visites y te sumerjas en la magia de "El Gorgojito Feliz", donde los sueños se hornean y los sabores se fusionan para crear momentos inolvidables.
+          <br><br>¡Ven y &uacute;nete a nuestra familia panadera en "El Gorgojito Feliz"! Te prometemos una experiencia &uacute;nica que cautivar&aacute; tus sentidos y te dejar&aacute; con una sonrisa en el rostro.
+        </p>
+      </div>
 </main>
 <footer>
     <div class="ft-centered">
         <a href="#" class="noLinkDec">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#8D7B68" class="bi bi-facebook" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="4cqmin" height="4cqmin" fill="#8D7B68" class="bi bi-facebook" viewBox="0 0 16 16">
                 <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
             </svg>
         </a>
         <a href="#" class="noLinkDec">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#8D7B68" class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="4cqmin" height="4cqmin" fill="#8D7B68" class="bi bi-whatsapp" viewBox="0 0 16 16">
                 <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
             </svg>
         </a>
         <a href="#" class="noLinkDec">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#8D7B68" class="bi bi-instagram" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="4cqmin" height="4cqmin" fill="#8D7B68" class="bi bi-instagram" viewBox="0 0 16 16">
                 <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
             </svg>
         </a>
         <a href="#" class="noLinkDec">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#8D7B68" class="bi bi-tiktok" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="4cqmin" height="4cqmin" fill="#8D7B68" class="bi bi-tiktok" viewBox="0 0 16 16">
                 <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3V0Z"/>
             </svg>
         </a>
         <a href="#" class="noLinkDec">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#8D7B68" class="bi bi-twitter" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="4cqmin" height="4cqmin" fill="#8D7B68" class="bi bi-twitter" viewBox="0 0 16 16">
                 <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
             </svg>
         </a>
         <a href="#" class="noLinkDec">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#8D7B68" class="bi bi-telegram" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="4cqmin" height="4cqmin" fill="#8D7B68" class="bi bi-telegram" viewBox="0 0 16 16">
                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"/>
             </svg>
         </a>
