--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <br><br>Pero somos mucho más que una panader&iacute;a. Es un lugar donde los corazones se llenan de calidez y amistad.
           Te recibiremos con una sonrisa genuina y compartiremos historias y consejos culinarios mientras disfrutas de nuestras creaciones.
           Te invitamos a que nos visites y te sumerjas en la magia de "El Gorgojito Feliz", donde los sueños se hornean y los sabores se fusionan para crear momentos inolvidables.
-          <br><br>¡Ven y &uacute;nete a nuestra familia panadera en "El Gorgojito Feliz"! Te prometemos una experiencia &uacute;nica que cautivar&aacute; tus sentidos y te dejar&aacute; con una sonrisa en el rostro.
+          <br><br>¡Ven y &uacute;nete a nuestra familia panadera en "El Gorgojo Feliz"! Te prometemos una experiencia &uacute;nica que cautivar&aacute; tus sentidos y te dejar&aacute; con una sonrisa en el rostro.
         </p>
       </div>
 </main>
