--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Panda Gorgojo Feliz</title>
+    <title>El Gorgojo Feliz</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/Estilos.css">
@@ -84,12 +84,12 @@
       <div class="intro">
         <p class="intro text">
           El fundador Zelencio Masa descubri&oacute; su amor por la panader&iacute;a desde temprana edad.
-          Inspirado por los aromas celestiales y los sabores inigualables que emanaban de la panader&iacute;a del pueblo, decidi&oacute; llevar esa experiencia &uacute;nica a un nivel superior. As&iacute; naci&oacute; "El Gorgojito Feliz".
-          <br><br>En "El Gorgojito Feliz", fusionamos la tradici&oacute;n con la innovaci&oacute;n. Utilizamos ingredientes frescos, locales e internacionales para crear aut&eacute;nticas obras maestras de la panader&iacute;a.
+          Inspirado por los aromas celestiales y los sabores inigualables que emanaban de la panader&iacute;a del pueblo, decidi&oacute; llevar esa experiencia &uacute;nica a un nivel superior. As&iacute; naci&oacute; "El Gorgojo Feliz".
+          <br><br>En "El Gorgojo Feliz", fusionamos la tradici&oacute;n con la innovaci&oacute;n. Utilizamos ingredientes frescos, locales e internacionales para crear aut&eacute;nticas obras maestras de la panader&iacute;a.
           Cada pan, postre y delicia est&aacute; hecho con el amor y la dedicaci&oacute;n de nuestro equipo de apasionados panaderos. El crujir dorado de una Tarta Francesa reci&eacute;n salida del horno o el sabor reconfortante de nuestros bollos reci&eacute;n horneados son solo una muestra de las delicias que te esperan.
           <br><br>Pero somos mucho más que una panader&iacute;a. Es un lugar donde los corazones se llenan de calidez y amistad.
           Te recibiremos con una sonrisa genuina y compartiremos historias y consejos culinarios mientras disfrutas de nuestras creaciones.
-          Te invitamos a que nos visites y te sumerjas en la magia de "El Gorgojito Feliz", donde los sueños se hornean y los sabores se fusionan para crear momentos inolvidables.
+          Te invitamos a que nos visites y te sumerjas en la magia de "El Gorgojo Feliz", donde los sueños se hornean y los sabores se fusionan para crear momentos inolvidables.
           <br><br>¡Ven y &uacute;nete a nuestra familia panadera en "El Gorgojo Feliz"! Te prometemos una experiencia &uacute;nica que cautivar&aacute; tus sentidos y te dejar&aacute; con una sonrisa en el rostro.
         </p>
       </div>
